# Adolap

./: Cargo.toml  Readme.md
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  ctrlc_handler.rs  main.rs  meta.rs  printer.rs  repl.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  id.rs  lib.rs  logging.rs  time.rs  types.rs  util.rs
crates/exec/: Cargo.toml
crates/exec/benches/: exec_benches.rs
crates/exec/src/: aggregate.rs  dsl.rs  executor.rs  filter.rs  global_aggregate.rs  global_group_by.rs  group_by.rs  lib.rs  logical_plan.rs  optimizer.rs  parser.rs  physical_plan.rs  planner.rs  predicate.rs  projection.rs  query_engine.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: codec.rs  framing.rs  lib.rs  message.rs
crates/server/: Cargo.toml
crates/server/src/: handler.rs  lib.rs  main.rs  meta.rs  tcp.rs
crates/storage/: Cargo.toml
crates/storage/benches/: storage_benches.rs
crates/storage/src/: background_compaction.rs  bloom.rs  catalog.rs  column.rs  column_reader.rs  column_writer.rs  compaction.rs  compression.rs  config.rs  lib.rs  metadata.rs  metadata_io.rs  naming.rs  null.rs  read_cache.rs  record_batch.rs  row_group.rs  row_group_reader.rs  row_group_writer.rs  schema.rs  segment.rs  segment_reader.rs  segment_writer.rs  stats.rs  table_reader.rs  table_writer.rs
data/test/events/: schema.json  table.config.json
data/test/events/segment_0/: segment.meta.json
data/test/events/segment_0/row_group_000/: column_0.bloom  column_0.data  column_1.bloom  column_1.data  column_1.dict  column_2.bloom  column_2.dict  column_3.bloom  column_3.data  column_4.data
data/test/events/segment_0/row_group_001/: column_0.bloom  column_0.data  column_1.bloom  column_1.data  column_1.dict  column_2.bloom  column_2.dict  column_3.bloom  column_3.data
docs/: 01_introduction.md  02_setup_and_local_development.md  03_storage_engine.md  04_query_language_and_planning.md  05_protocol_server_and_cli.md  06_end_to_end_walkthrough.md  07_bloom_filters.md  08_trade_offs_and_comparisons.md  architecture.md
