[package]
name = "core"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3"
serde_json = "1.0"
