[package]
name = "exec"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
core = { path = "../core" }
storage = { path = "../storage" }
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "exec_benches"
harness = false
