[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
adolap_core = { package = "core", path = "../core" }
protocol = { path = "../protocol" }
exec = { path = "../exec" }
storage = { path = "../storage" }
sysinfo = "0.38"
postcard = { version = "1.0", features = ["alloc"] }
tracing = "0.1"
