[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2.0"
postcard = { version = "1.0", features = ["alloc"] }
tokio = { version = "1.0", features = ["full"] }
ahash = "0.8"
lz4_flex = "0.13"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "storage_benches"
harness = false
